Fixed an issue with the new home page layout where it did not render correctly if the browser window was too small. Now we fix the width of the main content area to 960px and center it in the page.
Made the announcement text slightly bigger.

Note the current page is now set as a class on the body tag so that we
can better target styles for specific pages.

--- a/styles/home.css
+++ b/styles/home.css
@@ -164,6 +164,15 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
 
 /* Main content area */
 
+body.home div#layout {
+    padding-right: 10px;
+}
+
+section.layout-content.home {
+    width: 960px;
+    margin: 0 auto;
+}
+
 div.home-content {
     width: 650px;
     padding-top: 5px;
@@ -178,8 +187,8 @@ div.home-content {
     border-radius: 5px;
     padding: 15px;
     text-align: center;
-    font-family: arial;
     margin: 0 auto;
+    font-size: 1.2em;
 }
 
 /* 2x2 Featured Content Grid */
@@ -210,7 +219,7 @@ div.featured-content div.bottom-left {
 
 div.featured-content div.separator {
     float: left;
-    width: 630px;
+    width: 620px;
     margin-left: 10px;
     border-top: 1px solid #c3add9;
 }
